--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
                         <ul class="list-group mb-4">
                             <!-- Productos seleccionados -->
                         </ul>
+                        <p>Total: <span class="total">$0</span></p>
 
-                        <button type="button" class="vaciarCarrito btn btn-dark btn-lg px-4 py-2 rounded-3 shadow-sm">
+                        <button type="button" class="vaciarCarrito btn btn-warning btn-lg px-2 py-1 rounded-3 shadow-sm">
                             Vaciar Carrito
                         </button>
                     </div>
