--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="inicio">
             <div class="video-inicio">
                 <video controls muted loop width="60%">
-                    <source src="/videos/akihabara.mp4" type="video/mp4">
+                    <source src="/videos/Akihabara.mp4" type="video/mp4">
                     <track src="/videos/subtitle.vtt" kind="subtitles" srclang="en" label="Ingles">
                 </video>
             </div>
