cambio ruta videos y logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="nombre-tienda">
-            <img src="/imagenes/logo2.png" alt="Logo de AkibaCrew">
+            <img src="./imagenes/logo2.png" alt="Logo de AkibaCrew">
             <h1>Akibacrew</h1>
         </div>
         <nav aria-label="Menú principal"> <!---Barra navegación-->
@@ -46,8 +46,8 @@
         <section id="inicio">
             <div class="video-inicio">
                 <video controls muted loop width="60%">
-                    <source src="/videos/Akihabara.mp4" type="video/mp4">
-                    <track src="/videos/subtitle.vtt" kind="subtitles" srclang="en" label="Ingles">
+                    <source src="./videos/Akihabara.mp4" type="video/mp4">
+                    <track src="./videos/subtitle.vtt" kind="subtitles" srclang="en" label="Ingles">
                 </video>
             </div>
         </section>
